<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/main_blue"
    android:gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_quiz"
        android:textColor="@color/blue_text"
        android:gravity="center"
        android:fontFamily="@font/big_space"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/optionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/main_blue"
        android:text="@string/optionOne"
        android:fontFamily="@font/big_space"
        android:textSize="25sp"
        android:backgroundTint="@color/white"
        />
    <Button
        android:id="@+id/optionTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/main_blue"
        android:text="@string/optionTwo"
        android:fontFamily="@font/big_space"
        android:textSize="25sp"
        android:backgroundTint="@color/white"/>
    <Button
        android:id="@+id/optionThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/main_blue"
        android:text="@string/optionThree"
        android:fontFamily="@font/big_space"
        android:textSize="25sp"
        android:backgroundTint="@color/white"/>

</LinearLayout>